--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import "reset.css";
 @import "status-bar.css";
+@import "variables.css";
 
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -24,4 +25,28 @@ body {
 .welcome-header__text {
     width: 60%;
     opacity: 0.7;
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 30px;
+}
+
+#login-form input {
+    border: none;
+    padding: 15px 0px;
+    font-size: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 25px;
+    transition: border-color .3s ease-in-out;
+}
+
+#login-form input::placeholder{
+    color: rgba(0, 0, 0, 0.4);
+
+}
+
+#login-form input:focus {
+    border-color: var(--yellow);
 }
