--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,11 @@ body {
     border: none;
     padding: 15px 0px;
     font-size: 10px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 25px;
+}
+
+#login-form input:not([type="submit"]){
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     transition: border-color .3s ease-in-out;
 }
 
@@ -49,4 +52,18 @@ body {
 
 #login-form input:focus {
     border-color: var(--yellow);
+}
+
+#login-form input[type="submit"] {
+    background-color: var(--yellow);
+    cursor: pointer;
+    padding: 20px 0px;
+    border-radius: 5px;
+}
+
+#login-form a {
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+    font-size: 13px;
 }
