--- a/css/styles.css
+++ b/css/styles.css
@@ -9,5 +9,6 @@
 
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 1000vh;
 }
 
