--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,11 @@
 @import "components/screen-header.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #2e362e;
     height: 1000vh;
 }
 
