--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 35px 25px;
+    padding: 35px var(--horizontal-space);
 }
 
 .screen-header__title {
