--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,8 +4,14 @@
     background-color: #FAFAFA;
     padding: 15px 0px;
     font-size: 16px;
+    margin-bottom: 10px;
 }
 
 #friends-display-link i{
     color: rgba(0, 0, 0, 0.3);
+}
+
+
+.friends-screen {
+    padding: 0px var(--horizontal-space);
 }
