--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -9,3 +9,13 @@
     color: white;
     font-weight: 600;
 }
+
+.small-badge {
+    background-color: tomato;
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
