--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -45,7 +45,7 @@
 }
 
 .user-component__column:last-child {
-    color: rgba(0, 0, 0, 0.4);
+    color: var(--gray);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
