--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,7 +1,8 @@
 .find-icons {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: var(--main-border);
+    padding-bottom: 25px;
 }
 
 .find-icons__icon {
@@ -16,4 +17,22 @@
 
 .find-icons__icon span {
     margin-top: 15px;
+}
+
+.recommended-friends {
+    padding: 25px 0px;
+    border-bottom: var(--main-border);
+}
+
+.recommended-friends__title {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.recommended-friends span {
+    display: block;
+    margin: 100px 0px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 18px;
 }
