--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -36,3 +36,58 @@
     color: rgba(0, 0, 0, 0.3);
     font-size: 18px;
 }
+
+.open-chat__header {
+    display: flex;
+    justify-content: space-between;
+    opacity: 0.8;
+    margin-bottom: 25px;
+}
+
+.open-chat__header span {
+    opacity: 0.6;
+}
+
+.open-chat__post {
+    display: flex;
+}
+
+.open-chat__post-column__title {
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.open-chat__post-column__hashtags {
+    text-transform: uppercase;
+    opacity: 0.6;
+}
+
+.open-chat__post-column__members {
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+}
+
+.open-chat__post-column__members img {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.open-chat__post-column__members__count {
+    opacity: 0.5;
+    font-size: 14px;
+}
+
+.open-chat__post-column__members .divider {
+    width: 2px;
+    height: 15px;
+    margin: 0 5px;
+    background-color: var(--gray);
+}
+
+
+.open-chat__post-column__members__status {
+    color: #ff9fda;
+}
