--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -12,10 +12,21 @@
 
 }
 
-.alt-header__column:first-child {
-    margin-right: auto;
+.alt-header__column {
+    width: 33%
+}
+
+.alt-header__column:nth-child(2) {
+    display: flex;
+    justify-content: center;
 }
 
 .alt-header__column:last-child {
-    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.alt-header__column:last-child i {
+    margin-left: 20px;
 }
