--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -22,7 +22,7 @@
 }
 
 .main-chat {
-    margin-top: 120px;   
+    margin-top: 150px;   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,5 +33,43 @@
     color: white;
     background-color: #92a4b2;
     padding: 15px;
+    font-size: 14px;
     border-radius: 25px;
+    margin-bottom: 25px;
+}
+
+.message-row {
+    width: 100%;
+    display: flex;
+}
+
+.message-row img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.message__author {
+    margin-bottom: 15px;
+    display: block;
+}
+
+.message__info {
+    display: flex;
+    align-items: end;
+}
+
+.message__bubble {
+    background-color: white;
+    padding: 18px;
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    margin-right: 5px;
+}
+
+.message__author,
+.message__time {
+    opacity: 0.8;
+    font-size: 14px;
 }
