--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -75,8 +75,6 @@
     font-size: 14px;
 }
 
-
-
 .message-row--own .message__bubble {
     background-color: var(--yellow);
     border-top-right-radius: 0px;
@@ -87,4 +85,65 @@
 
 .message-row--own, .message__info {
     flex-direction: row-reverse;
+}
+
+.reply {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.reply .reply__column:first-child {
+    width: 10%;
+}
+
+.reply .reply__column:last-child {
+    width: 90%;
+    position: relative;
+}
+
+.reply input {
+    padding: 15px;
+    width: 100%;
+    border: var(--main-border);
+    border-radius: 20px;
+}
+
+.reply i {
+    opacity: 0.5;
+}
+
+.reply__column:last-child > i,
+.reply__column:last-child button {
+    position: absolute;
+    right: -3px;
+    top: 7px;
+}
+
+.reply__column:last-child > i {
+    right: 40px;
+    top: 20px;
+}
+
+.reply__column button {
+    background-color: var(--yellow);
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.reply__column button i {
+    opacity: 1;
+}
+
+.reply__column button:focus,
+.reply__column button:active {
+    outline: none;
 }
