Splash Screen part One

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -33,3 +33,15 @@
 .friends-screen__channel-header i {
     color: rgba(0, 0, 0, 0.5);
 }
+
+#splash-screen {
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 132px;
+}
