--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -34,6 +34,15 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 #splash-screen {
     background-color: var(--yellow);
     position: absolute;
@@ -44,4 +53,6 @@
     justify-content: center;
     align-items: center;
     font-size: 132px;
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    animation-delay: 3s;
 }
