--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,10 +18,23 @@
     position: relative;
 }
 
+@keyframes notificationAnimation {
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-5px) rotateY(360deg);
+    }
+    100%{
+        transform: none;
+    }
+}
+
 .nav__notification {
     position: absolute;
     left: 15px;
     bottom: 15px;
+    animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .ellipsis__notification {
@@ -29,3 +42,29 @@
     right: -10px;
     bottom: 25px;
 } 
+
+@keyframes appearBtnAnimation {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.nav__btn {
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay: 0.6s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 0.9s;
+}
+.nav__btn:last-child {
+    animation-delay: 1.2s;
+}
