--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -95,6 +95,27 @@
     font-size: 12px
 }
 
+@keyframes heartBeat {
+    0%{
+        color: white;
+        transform: none;
+    }
+    50%{
+        color: tomato;
+        transform: scale(1.5);
+    }
+    100%{
+        color: white;
+        transform: none;
+    }
+}
+
+.open-chat__post-column__heart-count:hover i {
+    will-change: transform;
+    animation: heartBeat 1s linear infinite;
+}
+
 .open-chat__post-column__heart-count span {
     margin-left: 3px;
 }
+
